--- a/src/index.css
+++ b/src/index.css
@@ -39,10 +39,10 @@ code {
 .lazy-menu ul {
   align-items: center;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
-  column-gap: 4%;
-  padding-left: 0;
+
+  padding-left: 10%;
 }
 
 nav {
