Control Props Implmentado

--- a/src/02-component-patterns/styles/custom-styles.css
+++ b/src/02-component-patterns/styles/custom-styles.css
@@ -6,6 +6,10 @@
   color: white;
 }
 
+.text-bold {
+  font-weight: bolder;
+}
+
 .custom-image {
   padding: 10px;
   border-radius: 20px;
@@ -15,4 +19,17 @@
 .custom-btns button ,.custom-btns div {
   color: white;
   border-color: white;
+}
+
+.shopping-cart {
+  background-color: rgb(3, 3, 12);
+
+  padding: 12px;
+  position: fixed;
+  right: 10px;
+  top: 0px;
+}
+
+.shopping-cart h2 {
+  font-size: 12px;
 }
