--- a/src/03-forms/styles/styles.css
+++ b/src/03-forms/styles/styles.css
@@ -6,6 +6,7 @@ form {
 
 input, select {
     margin-top: 5px;
+    margin-bottom: 7px;
     outline: none;
     padding: 10px;
 }
@@ -18,6 +19,8 @@ button {
 
 span, .error-message {
     color: red;
+    font-size: 12px;
+    margin-bottom: 2px;
 }
 
 .has-error {
